[tool.poetry]
name = "db_flask"
version = "0.1.0"
description = ""
authors = ["Nakarin Hansawattana <nakarinh14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
pylint = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
